<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_welcome"
            android:text="@string/input_tv_welcome"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_normal"
            android:text="@string/input_tv_prime_desc"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/text_normal"
            android:text="@string/input_tv_app_desc"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <EditText
            android:id="@+id/input_et_input_n"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:hint="@string/input_et_enter_n"
            android:inputType="numberDecimal"
            android:background="@drawable/apptheme_edit_text_holo_light"/>

        <Button
            android:id="@+id/input_bt_find"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/input_bt_find"
            android:textColor="@android:color/white"
            android:background="@drawable/button_selector"
            android:padding="15dp"/>

    </LinearLayout>
</ScrollView>